@@ -1,22 +1,7 @@
-/*
- * Copyright 2000-2013 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.idea.maven.importing;
 
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.intellij.execution.configurations.JavaParameters;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
@@ -48,11 +33,10 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-public class MavenModuleImporter {
-
+public final class MavenModuleImporter {
   public static final String SUREFIRE_PLUGIN_LIBRARY_NAME = "maven-surefire-plugin urls";
 
-  private static final Set<String> IMPORTED_CLASSIFIERS = ImmutableSet.of("client");
+  private static final Set<String> IMPORTED_CLASSIFIERS = Set.of("client");
 
   private static final Map<String, LanguageLevel> MAVEN_IDEA_PLUGIN_LEVELS = ImmutableMap.of(
     "JDK_1_3", LanguageLevel.JDK_1_3,
@@ -265,7 +249,8 @@ public class MavenModuleImporter {
             addAttachArtifactDependency(buildHelperCfg, scope, depProject, artifact);
           }
 
-          if (IMPORTED_CLASSIFIERS.contains(artifact.getClassifier())
+          String classifier = artifact.getClassifier();
+          if (classifier != null && IMPORTED_CLASSIFIERS.contains(classifier)
               && !isTestJar
               && !"system".equals(artifact.getScope())
               && !"false".equals(System.getProperty("idea.maven.classifier.dep"))) {
@@ -275,7 +260,7 @@ public class MavenModuleImporter {
               artifact.getVersion(),
               artifact.getBaseVersion(),
               dependencyType,
-              artifact.getClassifier(),
+              classifier,
               artifact.getScope(),
               artifact.isOptional(),
               artifact.getExtension(),
